splitted on chunks page's js/splitted scss/removed some bem mixins

--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -60,7 +60,7 @@ mixin card-book(details)
           .card-book__calc-total
             span.card-book__total
               | Итого 
-            span.card-book__dotted-line
+            span.card-book__line
             span.card-book__total-price.js-card-book__total-price
               | 0
               span.card-book__rub
