--- a/src/components/card-book/card-book.scss
+++ b/src/components/card-book/card-book.scss
@@ -165,7 +165,7 @@
     white-space: pre-line;
   }
 
-  &__dotted-line {
+  &__line {
     margin-right: 5px;
     margin-left: 5px;
     display: block;
