--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -1,10 +1,10 @@
 mixin card-room(images,roomDetails)
   .card-room.js-card-room
     .card-room__slider
-      .swiper-container.js-swiper-container.card-room__swiper-container
-        .swiper-pagination.card-room__pagination
-        .swiper-button-prev.card-room__button-prev
-        .swiper-button-next.card-room__button-next
+      .swiper-container.js-swiper-container
+        .swiper-pagination
+        .swiper-button-prev
+        .swiper-button-next
         .swiper-wrapper
           each val, index in images
             .swiper-slide.card-room__slide
