--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,8 +3,8 @@ mixin footer()
     .container
       .footer__content
         .footer__block-text
-          a(href="index.html")
-            svg.footer__logo.logo.logo_colored
+          a(href="index.html").footer__link-logo
+            svg.logo.logo_colored
               use(xlink:href="#logo-colored")
           p.footer__achievement
             | Бронирование номеров в лучшем
