--- a/src/main.scss
+++ b/src/main.scss
@@ -1,8 +1,11 @@
 @import '~utils/utils-scss/vars.scss';
 @import '~utils/utils-scss/reset.scss';
 @import '~utils/utils-scss/fonts.scss';
+@import '~utils/utils-scss/button.scss';
 @import '~components/header/header';
 @import '~components/footer/footer';
+@import '~components/logo/logo';
+@import '~components/subscription/subscription';
 
 html {
   height: 100%;
