--- a/src/pages/index/index.pug
+++ b/src/pages/index/index.pug
@@ -13,7 +13,7 @@ block content
       li(class="index__list-item")
         a(href="/landing.html" class="index__link") landing page
       li(class="index__list-item")
-        a(href="/headers-&-footers.html" class="index__link") headers and footers
+        a(href="/headers-footers.html" class="index__link") headers and footers
       li(class="index__list-item")
         a(href="/registration.html" class="index__link") reginstration page
       li(class="index__list-item")
