--- a/src/components/filter-date/filter-date.scss
+++ b/src/components/filter-date/filter-date.scss
@@ -40,7 +40,7 @@
     max-width: 12px;
     min-height: 12px;
     opacity: 0.7;
-    background-image: url('assets/img/expand-more.svg');
+    background-image: url('~img/expand-more.svg');
     background-repeat: no-repeat;
     background-position: center;
     cursor: pointer;
