--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -68,7 +68,7 @@
   }
 
   input:checked + span {
-    background-image: url('./assets/img/vector.svg');
+    background-image: url('~img/vector.svg');
     background-repeat: no-repeat;
     background-position: 50% 50%;
     border-color: $primary-color;
