--- a/src/pages/cards/cards.pug
+++ b/src/pages/cards/cards.pug
@@ -1,7 +1,7 @@
 extends ../main
 
-include ../../components/textField/textField.pug
-include ../../components/masked-textfield/masked-textfield.pug
+include ../../components/text-field/text-field.pug
+include ../../components/masked-text-field/masked-text-field.pug
 include ../../components/dropdown-choose/dropdown-choose.pug
 include ../../components/date-dropdown/date-dropdown.pug
 include ../../components/filter-date/filter-date.pug
@@ -41,15 +41,15 @@ block content
         .cards-page__card 
           .js-datepicker-inline
         .cards-page__card
-          +card-sing-in()
+          +card-sign-in()
         .cards-page__card
           +card-check-in()
         .cards-page__card
           +card-room([
-          {src: "room-2.jpg"},
-          {src: "room-2.jpg"},
-          {src: "room-2.jpg"},
-          {src: "room-2.jpg"}
+            {src: "room-2.jpg"},
+            {src: "room-2.jpg"},
+            {src: "room-2.jpg"},
+            {src: "room-2.jpg"}
           ],
           {
             type: "люкс",
@@ -60,10 +60,10 @@ block content
           })
         .cards-page__card
           +card-room([
-          {src: "room-1.jpg"},
-          {src: "room-1.jpg"},
-          {src: "room-1.jpg"},
-          {src: "room-1.jpg"}
+            {src: "room-1.jpg"},
+            {src: "room-1.jpg"},
+            {src: "room-1.jpg"},
+            {src: "room-1.jpg"}
           ],
           {
             type: "люкс",
