--- a/src/pages/headers-footers/headers-footers.scss
+++ b/src/pages/headers-footers/headers-footers.scss
@@ -1,3 +1,8 @@
+@import '~utils/utils-scss/button.scss';
+@import '~src/main.scss';
+@import '~components/logo/logo';
+@import '~components/subscription/subscription';
+
 .headers-footers {
   width: 100%;
   height: 100%;
