--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -3,7 +3,7 @@ extends ../main
 include ../../components/header/header
 include ../../components/footer/footer
 include ../../components/subscription/subscription
-include ../../components/textField/textField
+include ../../components/text-field/text-field
 include ../../components/radio-buttons/radio-buttons
 include ../../components/card-sign-in/card-sign-in
 include ../../components/date-dropdown/date-dropdown
@@ -49,5 +49,5 @@ block content
     .sign-in-page
       .container
         main.sign-in-page__main
-          +card-sing-in()
+          +card-sign-in()
   +footer()
