--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -1,5 +1,14 @@
+@import '~src/main.scss';
+@import '~utils/utils-scss/button.scss';
+@import '~components/svg-icons/svg-icons';
+@import '~components/card-sign-in/card-sign-in';
+@import '~components/text-field/text-field';
+@import '~components/toggle-buttons/toggle-buttons';
+@import '~components/radio-buttons/radio-buttons';
+@import '~components/masked-text-field/masked-text-field';
+
 .sign-in-page {
-  background-image: url('pages/sign-in-page/images/landing-page-bg-2.jpg');
+  background-image: url('./images/landing-page-bg-2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-origin: content-box;
